--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .main {
@@ -13,6 +14,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+}
+
+.main form{
+  width: 50%;
+  flex: 1 1 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-grow: 0;
 }
 
 .footer {
@@ -118,4 +129,41 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.list, .list > li {
+  display: inline-block;
+  margin: 5px;
+  text-transform: capitalize;
+}
+
+.input {
+  padding: 5px 15px 5px 15px;
+  border: #9c9c9c solid 1px;
+  border-radius: 50px;
+  outline: none;
+  width: 100%;
+}
+
+.item {
+  border: #9c9c9c solid 1px;
+  padding: 5px 5px 5px 10px;
+  border-radius: 50px;
+}
+
+.removeButton {
+  background-color: none;
+  border-radius: 100%;
+  border: #9c9c9c solid 1px;
+  outline: none;
+}
+
+.btn {
+  margin: 10px;
+  outline: none;
+  background-color: #40e9db;
+  padding: 5px 15px 5px 15px;
+  border: #9c9c9c solid 1px;
+  color: white;
+  border-radius: 50px;
 }
